Resolves issue #300 Last chat message hidden behind input field

--- a/res/default.css
+++ b/res/default.css
@@ -302,7 +302,7 @@ ul {
 	position: absolute;
 	top: 0;
 	right: 0;
-	bottom: 0;
+	bottom: 62px;
 	left: 0;
 	height: auto;
 	width: auto;
